include_directories(${PROJECT_SOURCE_DIR}/include)

macro(papyruskv_test arg)
    add_executable(kv.${arg} ${arg}.c)
    target_link_libraries(kv.${arg} papyruskv pthread)
    add_test(kv.${arg} ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 4 ./kv.${arg})
    set_tests_properties(kv.${arg} PROPERTIES FAIL_REGULAR_EXPRESSION "FAILED")
endmacro(papyruskv_test)

macro(papyruskv_test_fortran arg)
    include_directories(${PROJECT_BINARY_DIR}/include)
    add_executable(kv.${arg} ${arg}.f90)
    target_link_libraries(kv.${arg} papyruskv pthread)
    add_test(kv.${arg} ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 4 ./kv.${arg})
    set_tests_properties(kv.${arg} PROPERTIES FAIL_REGULAR_EXPRESSION "FAILED")
endmacro(papyruskv_test_fortran)

add_subdirectory(01_open_close)
add_subdirectory(02_put_get)
add_subdirectory(03_barrier)
add_subdirectory(04_delete)
add_subdirectory(05_fence)
add_subdirectory(06_signal)
add_subdirectory(07_consistency)
add_subdirectory(08_protect)
add_subdirectory(09_cache)
add_subdirectory(10_checkpoint)
add_subdirectory(11_restart)
add_subdirectory(12_free)
#add_subdirectory(13_upc)
if(PAPYRUS_USE_FORTRAN)
add_subdirectory(14_fortran)
endif()
